{{$NEXT}}

1.002     2021-06-09 00:33:32 EDT
  - Documentation updates

1.001     2021-06-07 23:16:34 EDT
  - Move "EXTENDING" examples to CGI::Tiny::Cookbook and examples/

1.000     2021-05-30 17:09:42 EDT
  - Remove experimental status

0.020     2021-05-30 00:05:56 EDT
  - Replace set_discard_form_files method with more generic set_multipart_form_options
  - Improved test coverage

0.019     2021-05-25 23:52:51 EDT
  - Add params, param_names, param, and param_array general request parameter accessors
  - Add on_file_buffer callback option to CGI::Tiny::Multipart::parse_multipart_form_data for custom form parsing
  - Rename tempfiles option to parse_as_files for CGI::Tiny::Multipart::parse_multipart_form_data

0.018     2021-05-19 18:12:06 EDT
  - CGI::Tiny::Multipart::parse_multipart_form_data now takes a single tempfiles option instead of all_tempfiles and no_tempfiles

0.017     2021-05-19 01:41:51 EDT
  - Split multipart/form-data parser into CGI::Tiny::Multipart module, which is reusable and only loaded if needed
  - Add set_discard_form_files method

0.016     2021-05-05 21:31:12 EDT
  - Add CGI::Tiny::escape_html convenience function

0.015     2021-05-05 01:57:53 EDT
  - Add debugging commands for commandline convenience
  - Ignore response content passed to render and render_chunk in HEAD requests
  - Omit autodetected Content-Type header when rendering empty fixed-length responses

0.014     2021-05-04 03:26:46 EDT
  - Remove headers_rendered method, instead pass rendered status to error handlers

0.013     2021-05-03 23:32:56 EDT
  - Skip tests that don't work on Windows
  - Rendering a redirect will now set the response status to 302 if any non-300 status was set
  - Exceptions and failure to render now set a 500 response status unless any error status was set

0.012     2021-05-02 23:28:28 EDT
  - Remove set_response_fixed_length
  - render now always sets a Content-Length and can only be called once